--- a/common/src/main/resources/assets/voicelib/lang/en_us.json
+++ b/common/src/main/resources/assets/voicelib/lang/en_us.json
@@ -1,4 +1,4 @@
 {
   "category.voicelib.voicelib" : "VoiceLib",
-  "key.voicelib.push_to_talk" : "Push To Talk"
+  "key.voicelib.push_to_mute" : "Push To Mute"
 }
