--- a/common/src/main/resources/assets/shriek/lang/en_us.json
+++ b/common/src/main/resources/assets/shriek/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "category.shriek.shriek" : "Shriek",
+  "key.category.shriek.shriek" : "Shriek",
   "key.shriek.push_to_mute" : "Push To Mute"
 }
